Prevent overflowing event cards to break page layout

--- a/src/domain/events/eventList/eventList.module.scss
+++ b/src/domain/events/eventList/eventList.module.scss
@@ -11,7 +11,7 @@
 }
 
 .contentContainer {
-  overflow: visible;
+  overflow: auto;
 }
 
 .eventCards,
